tests/cases/fail/inheritance_non_class_base.p4
class Broken(int):
    value: int
